--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dailyexpense",
-    "homepage": "https://yashm13114.github.io/yash",
+    "homepage": "https://Dhairya432r.github.io/yash",
     "private": true,
     "version": "0.0.0",
     "type": "module",
